fix visibility issue of window close button

--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ button:active{
     top: 1px;
     cursor: pointer;
     background-color: white;
+    color: black;
     box-shadow: inset 0 0 3px #000;
     border-radius: 3px;
     padding: 0 4px 1px;
